# QmlTS

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  WARNINGS-ANALYSIS.txt  biome.json  bunfig.toml  package.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
docs/steps/: step4-v2-native-runtime-design.md
native/: .gitignore  Cargo.toml  README.md  clippy.toml
native/crates/qmlts-host/: Cargo.toml  build.rs
native/crates/qmlts-host-generated/: Cargo.toml  build.rs
native/crates/qmlts-host-generated/cpp/: factories.cpp  factories_v2.cpp
native/crates/qmlts-host-generated/src/: counter_runtime.rs  counter_v2.rs  counter_view_model.rs  counter_vm.rs  dispatch.rs  lib.rs  login_runtime.rs  login_v2.rs  login_view_model.rs  login_vm.rs  qmlts_runtime.rs  search_runtime.rs  search_v2.rs  search_view_model.rs  v2_dispatch.rs
native/crates/qmlts-host-generated/tests/: bridge_qobject.rs
native/crates/qmlts-host/cpp/: qt_context.cpp
native/crates/qmlts-host/src/: bridge_registry.rs  engine.rs  error.rs  exports.rs  instance_registry.rs  lib.rs  list_model.rs  property_sync.rs  qt_context.rs  schema.rs  type_registrar.rs  v2_runtime.rs
native/crates/qmlts-host/tests/: bridge_integration.rs
native/npm/qmlts-host/: index.cjs  index.d.ts  index.js  package.json
native/npm/qmlts-host/scripts/: restore-types.mjs
native/npm/qmlts-host/src/: dev-server.ts  index.ts  qmlts-host.ts  types.ts  v2-types.ts  viewmodel-manager.ts
scripts/: generate-dsl.ts  generate-golden.ts  generate-registry.ts
src/: index.ts
src/ast/: builder.ts  index.ts  serializer.ts  transform.ts  types.ts  utils.ts  validator.ts  values.ts  visitor.ts  walker.ts
src/compiler/: diagnostics.ts  index.ts
src/dev-tools/: dev-console.ts  dev-server.ts  dev-types.ts  error-overlay.ts  file-watcher.ts  hot-reload-orchestrator.ts  index.ts  instance-selector.ts  perf-profiler.ts  repl.ts
src/emitter/: emitter.ts  index.ts  normalize.ts  source-map.ts  types.ts  writer.ts
src/qt-tools/: diagnostic.ts  errors.ts  factories.ts  index.ts  qml-runner.ts  qmlcachegen.ts  qmldom.ts  qmlformat.ts  qmlimportscanner.ts  qmllint.ts  qmltc.ts  qmltyperegistrar.ts  quality-gate.ts  rcc.ts  temp-file.ts  tool-runner.ts  toolchain.ts  types.ts
src/registry/: builder.ts  errors.ts  index.ts  metatypes-parser.ts  normalizer.ts  qmldir-parser.ts  qmltypes-parser.ts  registry-query.ts  scanner.ts  snapshot.ts  type-name-mapper.ts  types.ts
src/viewmodel/: decorators.ts  index.ts  lifecycle.ts  metadata.ts  schema.ts  types.ts
tests/: tsconfig.json
tests/ast/: builder.test.ts  e2e.test.ts  serializer.test.ts  transform.test.ts  utils.test.ts  validator-semantic.test.ts  validator-structure.test.ts  value-factory.test.ts  visitor.test.ts  walker.test.ts
tests/dev-tools/: dev-console.test.ts  dev-server.test.ts  error-overlay.test.ts  file-watcher.test.ts  hot-reload-orchestrator.test.ts  instance-selector.test.ts  perf-profiler.test.ts  repl.test.ts
tests/dsl/: acceptance.test.ts  cli-smoke.test.ts  full-generation-written.test.ts  full-generation.test.ts  usage.test.ts  validation.test.ts
(+189 files in other folders)
