[workspace]
resolver = "2"
members = ["crates/qmlts-host", "crates/qmlts-host-generated"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/QmlTS/QmlTS"
rust-version = "1.85"

[workspace.dependencies]
# napi-rs for Node.js/Bun native module
napi = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"
napi-build = "2"

# cxx-qt for Qt interop
cxx = "1"
cxx-qt = "0.7"
cxx-qt-lib = "0.7"
cxx-qt-build = "0.7"

# Error handling
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
