[package]
name = "qmlts-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "QmlTS native host - napi-rs + cxx-qt bridge for Qt QML engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
cxx = { workspace = true }
cxx-qt = { workspace = true }
cxx-qt-lib = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
cxx-qt-build = { workspace = true }

[features]
default = []
# Enable this feature to skip Qt runtime checks (for CI without Qt)
mock-qt = []
