[package]
name = "qmlts-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "QmlTS native host - napi-rs + cxx-qt bridge for Qt QML engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { workspace = true, optional = true }
napi-derive = { workspace = true, optional = true }
cxx = { workspace = true }
cxx-qt = { workspace = true }
cxx-qt-lib = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
qmlts-host-generated = { path = "../qmlts-host-generated" }

[build-dependencies]
napi-build = { workspace = true }
cxx-qt-build = { workspace = true }

[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]
# Enable this feature to skip Qt runtime checks (for CI without Qt)
mock-qt = []
